years in dataset OK

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,5 +14,8 @@ Suggests: knitr,
 VignetteBuilder: knitr
 Imports: readxl,
     utils,
-    assertthat
+    assertthat,
+    tidyr,
+    tidyverse,
+    dplyr
 RoxygenNote: 6.0.1
